Added Task Management APIs
